--- a/templates/level-up/dialog/choose-special.hbs
+++ b/templates/level-up/dialog/choose-special.hbs
@@ -4,7 +4,7 @@
             {{ special.label }}
         </button>
     {{/each}}
-    <div>
+    <div class="my-1">
         <button data-cancel>Cancel</button>
     </div>
 </div>
