convert level up to v2

--- a/css/v2-override.css
+++ b/css/v2-override.css
@@ -7,6 +7,10 @@
     background: var(--user-color);
 }
 
+.application button > i {
+    margin: 0;
+}
+
 .application label {
     color: var(--user-color);
 }
