--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,7 @@
+.text-center {
+  text-align: center;
+}
+
 .flex {
   display: flex;
   align-items: center;
@@ -65,6 +69,10 @@
 
 .ml-2 {
   margin-left: 10px;
+}
+
+.mx-auto {
+  margin: 0 auto;
 }
 
 .mx-1 {
