--- a/templates/actor/items/equipped-armor.hbs
+++ b/templates/actor/items/equipped-armor.hbs
@@ -113,7 +113,7 @@
         <span class="show-unequipped">
             Show Unequipped:
         </span>
-        <i data-showEquipped class="fas fa-toggle-{{#if system.showEquipped}}on{{else}}off{{/if}}"></i>
+        <i data-showEquipped class="fas fa-toggle-{{#if system.showEquipped}}on{{else}}off{{/if}} show-unequipped"></i>
     </div>
     <div style="border:solid 1px;"
          class="fakebutton combat-actions combat-menu grid-span-9">
