--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -13,6 +13,7 @@
 @import 'drag-drop.css';
 @import 'perk-list.css';
 @import 'level-up.css';
+@import 'crafting-bench.css';
 @import 'v2-override.css';
 
 /* Global styles */
