--- a/templates/dialog/gm-screen.hbs
+++ b/templates/dialog/gm-screen.hbs
@@ -1,5 +1,13 @@
-    <div class="award">
-        <h1>Award</h1>
+    <div class="gm-screen">
+
+        <div>
+            actor:
+            {{#each actors as |actor|}}
+                 {{ actor.name }}
+            {{/each}}
+        </div>
+
+        <h1>GM screen</h1>
         <div class="grid grid-3col characters">
             <div>
                 Name
