--- a/templates/actor/parts/actor-crafting.hbs
+++ b/templates/actor/parts/actor-crafting.hbs
@@ -1,5 +1,10 @@
 <table class="backpack">
     <tr>
+        <td>
+            <button data-crafting-bench>Crafting bench</button>
+        </td>
+    </tr>
+    <tr>
         <td style="padding-right:10px;width:40%">
             <table class="equipped-stats" id="matsTable">
                 <tr><td colspan="999">
