--- a/templates/crafting-bench/main.hbs
+++ b/templates/crafting-bench/main.hbs
@@ -1,19 +1,98 @@
 <section class="main">
-    <h1>Crafting</h1>
-    <div>
-        {{#if selectedCraftable}}
-            <h2>
-                Selected craftable: {{ selectedCraftable.label }}
-            </h2>
-        {{else}}
-            <h2>
-                Select something to craft
-            </h2>
-        {{/if}}
-    </div>
-    <div>
-        
-    </div>
+    {{#if selectedCraftable}}
+    <h1>Crafting {{ selectedCraftable.name }}</h1>
+        <div>
+            <section>
+                <h5>Currently owned</h5>
+                <div class="grid grid-2col">
+                    <div>
+                        Owned
+                    </div>
+                    <div>
+                        {{ owned }}
+                    </div>
+                </div>
+
+            </section>
+            <section>
+                <h5>Time requirement</h5>
+                <div>
+                {{ selectedCraftable.time.value }} {{ selectedCraftable.time.unit }}
+                </div>
+            </section>
+            <section>
+                <h5>Skill requirements</h5>
+                <div class="grid grid-3col">
+                    <div>
+                        Skill
+                    </div>
+                    <div>
+                        DC
+                    </div>
+                    <div>
+                        Actor modifier
+                    </div>
+                    {{#each selectedCraftable.requirements as |requirement|}}
+                        <div>
+                            {{#each requirement.keys as |key|}}
+                                {{#GreaterThan @index 1}} or {{/GreaterThan}} {{key}}
+                            {{/each}}
+                        </div>
+                        <div>
+                            {{ requirement.dc }}
+                        </div>
+                        <div>
+                            {{!-- #TODO HOW TO HANDLE MULTIPLE? --}}
+                            {{#each requirement.keys as |key|}}
+                                {{lookup ../../skills key}} 
+                            {{/each}}
+                        </div>
+                    {{/each}}
+                </div>
+            </section>
+            <section>
+                <h5>Material requirements</h5>
+                <div class="grid grid-3col">
+                    <div>
+                        Material
+                    </div>
+                    <div>
+                        Quantity
+                    </div>
+                    <div>
+                        Owned
+                    </div>
+                    {{#each selectedCraftable.materials as |material|}}
+                        <div>
+                            {{material.name}}
+                        </div>
+                        <div>
+                            {{material.quantity}}
+                        </div>
+                        <div>
+                            {{!-- #TODO BETTER WAY TO LOOKUP? --}}
+                            {{#if (lookup ../materials material.name)}}
+                                {{#with (lookup ../materials material.name)~}}
+                                    {{ this.quantity }}
+                                {{/with}}
+                            {{else}}
+                                0
+                            {{/if}}
+                        </div>
+                    {{/each}}
+                </div>
+            </section>
+            <section>
+                <div>
+                    <button data-action="craft">
+                        Craft item
+                    </button>
+                </div>
+            </section>
+        </div>
+    {{else}}
+        <h1>Select something to craft</h1>
+    {{/if}}
 </section>
 
 {{ log this }}
